added contact page

--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,25 @@
     </header>
     <nav>
         <a id="home" href="./index.html">Home</a>
-        <a id="contact" href="./contact.html">Contact Page</a>
+        <a id="contact" href="./contact.html">Contact</a>
     </nav>
     <section>
         <aside>
-            <h2>Contact</h2>
+            <h2>Contact Me!</h2>
+            <div class="flexbox">
+            <a  href="https://uk.linkedin.com/in/benjamin-mohaci-4627a02b4">
+                <img class="contact" src="contact1.png">
+            </a>
+
+            <a href="https://github.com/benjmoh">
+                <img class="contact" src="contact2.png">
+            </a>
+
+                <a  href="mailto:benjamin.mohaci@outlook.com">
+                    <img class="contact" src="contact3.png">
+                </a>
+           </div>     
+
         </aside>
        
     
