--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a id="contact" href="./contact.html">Contact</a>
     </nav>
     <section>
-        <aside>
+        <aside id="about">
             <h2>About Me</h2>
             <p>
             Hi! I am Benjamin Mohaci and I am an upcoming software developer!
